# AISocietyIndividualProject

./: .gitignore  Prologue.ipynb  README.md
simulation/: .dockerignore  .gitignore  Dockerfile  camera.py  collision_grid.py  game_tick_manager.py  main.py  pyproject.toml  requirements.txt  survivor.py  tree.py  vector.py
simulation/ai/: genetic_nl.py  layer.py  my-neat-config  my_checkpointer.py  my_neat.py  neuralnetwork.py
simulation/drawing/: camera.py  campfire_painter.py  day_painter.py  draw_factory.py  draw_wrapper.py  entity_painter.py  grid_painter.py  image_store.py  neuralnetwork_painter.py  sapling_painter.py  survivor_info_painter.py  survivor_painter.py  tree_painter.py
simulation/drawing/sprites/: campfire_sprite.py  cold_bar_sprite.py  entity_sprite_base.py  hunger_bar_sprite.py  sapling_sprite.py  stat_bar_base.py  survivor_sprite.py  (+1 more)
simulation/entities/: campfire.py  entity_base.py  entity_enums.py  sapling.py  survivor.py  tree.py
simulation/ga_example/: agent.py  agent_dna.py  ga_main.py
simulation/gym/: gym_main.py
simulation/map_creator/: map_creator_main.py  map_save.py  rename_unpickler.py
simulation/snake/: data_collector.py  dna.py  food_dna.py  game.py  main.py
simulation/snake_ai/: game.py  gen_info.py  main.py  snake.py
simulation/util/: draw_util.py  linalg.py  util_enums.py  vector.py  vector_pool.py
simulation/world/: collision_grid.py  data_collector.py  data_enums.py  datacollector.py  game_tick_dto.py  game_tick_manager.py  map_dto.py  overworld_map.py  tick_counter.py  waiting_map.py  world.py  world_map.py
(+29 files in other folders)
