[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["matthijs <matthijs.3mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
neat-python = "^0.92"
pandas = "^1.5.1"
neurolab = "^0.3.5"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
